.provarCaches/00D410000011HE0EAM/objects/rstkf__glfinstmt2__c.object
<CustomObject>
    <description>glfinstmt2__c</description>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__glfinstmt2_glfinstmt1__r.rstkf__externalid__c &amp; &apos;_&apos; &amp;  TEXT( rstkf__glfinstmt2_titleline__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__glfinstmt2_glfinstmt1__r.rstkf__glfinstmt1_glfstmplt2__r.Name &amp; &apos;-Report-&apos; &amp;  TEXT( rstkf__glfinstmt2_glfinstmt1__r.rstkf__glfinstmt1_report__c ) &amp; &apos;-Title Line-&apos; &amp;  TEXT( rstkf__glfinstmt2_titleline__c )</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt2_glfinstmt1__c</fullName>
        <label>Financial Statement Data - Top Level</label>
        <referenceTo>rstkf__glfinstmt1__c</referenceTo>
        <relationshipName>glfinstmt2s</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt2_title__c</fullName>
        <label>Text of Title Line</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glfinstmt2_titleline__c</fullName>
        <label>Number of Title Line (1 = Top)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Financial Report Data – Report Header</label>
    <listViews>
        <fullName>rstkf__RS_Financial_Statement_Data_Report_Headers</fullName>
        <columns>NAME</columns>
        <columns>rstkf__glfinstmt2_glfinstmt1__c</columns>
        <columns>rstkf__glfinstmt2_titleline__c</columns>
        <columns>rstkf__glfinstmt2_title__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Financial Statement Data –Report Headers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Report Data –Report Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>